--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node": ">=22.13.0"
   },
   "dependencies": {
+    "@mastra/ai-sdk": "^0.3.3",
     "@mastra/core": "^0.24.6",
     "@mastra/evals": "^0.14.4",
     "@mastra/libsql": "^0.16.3",
